--- a/index.css
+++ b/index.css
@@ -223,7 +223,7 @@ a:hover {
   float: left;
   margin-top: 30px;
   display: table-row;
-  width: 90%;
+  width: 100%;
   padding: 20px;
 }
 .info.features {
@@ -245,7 +245,7 @@ a:hover {
   float: left;
   margin-top: 30px;
   display: table-row;
-  width: 90%;
+  width: 100%;
   padding: 20px;
 }
 .info2.services {
@@ -253,21 +253,18 @@ a:hover {
   padding: 20px;
   display: table-row;
   width: 30%;
-  padding: 20px;
 }
 .info2.product {
   float: left;
   padding: 20px;
   display: table-row;
   width: 30%;
-  padding: 20px;
 }
 .info2.vision {
   float: left;
   padding: 20px;
   display: table-row;
   width: 30%;
-  padding: 20px;
 }
 
 .middleImg {
@@ -276,12 +273,13 @@ a:hover {
   display: table-row;
   width: 90%;
   padding: 20px;
+  margin-left: 10%;
   align-content: center;
 }
 
 .address {
   display: table-row;
-  width: 80%;
+  width: 100%;
   padding: 20px;
   float: left;
 }
@@ -298,6 +296,7 @@ a:hover {
   display: table-row;
   display: block;
   color: black;
+  background-color: black;
   margin-left: 0.5em;
   margin-right: 0.5em;
   margin-block-start: auto;
@@ -306,4 +305,5 @@ a:hover {
   border-style: inset;
   border-width: 1px;
   width: 100%;
+  height: 3px;
 }
